// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card with all props renders as expected 1`] = `
<div
  className="MuiGrid-root makeStyles-gridItem-1 MuiGrid-item"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-cardBase-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardContent-root"
    >
      <h2>
        Test
      </h2>
      <div>
        This is a test subtitle
      </div>
    </div>
    <hr
      className="MuiDivider-root"
    />
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
      >
        <a
          aria-disabled={false}
          className="MuiButtonBase-root MuiButton-root MuiButton-text"
          href="https://example.dev/"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
        >
          <span
            className="MuiButton-label"
          >
            Test Lint
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card with only required props renders as expected 1`] = `
<div
  className="MuiGrid-root makeStyles-gridItem-1 MuiGrid-item"
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-cardBase-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardContent-root"
    >
      <h2>
        Test
      </h2>
    </div>
    <hr
      className="MuiDivider-root"
    />
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
      >
        <a
          aria-disabled={false}
          className="MuiButtonBase-root MuiButton-root MuiButton-text"
          href="https://example.dev/"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
        >
          <span
            className="MuiButton-label"
          >
            Test Lint
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
